@@ -35,6 +35,29 @@ istream_direct_to_socket(istream_direct_t src_type, int src_fd,
 #endif
 }
 
+#ifdef SPLICE
+ssize_t
+istream_direct_pipe_to_pipe(int src_fd, int dest_fd, size_t max_length);
+#endif
+
+static inline int
+istream_direct_to_pipe(istream_direct_t src_type, int src_fd,
+                       int dest_fd, size_t max_length)
+{
+#ifdef SPLICE
+    if (src_type == ISTREAM_PIPE) {
+        return istream_direct_pipe_to_pipe(src_fd, dest_fd, max_length);
+    } else {
+#endif
+        (void)src_type;
+
+        return splice(src_fd, NULL, dest_fd, NULL, max_length,
+                      SPLICE_F_NONBLOCK | SPLICE_F_MORE | SPLICE_F_MOVE);
+#ifdef SPLICE
+    }
+#endif
+}
+
 #endif  /* #ifdef __linux */
 
 #endif
