@@ -20,11 +20,11 @@ enum istream_direct {
     ISTREAM_ANY = (ISTREAM_FILE | ISTREAM_PIPE | ISTREAM_SOCKET),
 
 #ifdef __linux
-    ISTREAM_TO_PIPE = ISTREAM_FILE,
-
 #ifdef SPLICE
+    ISTREAM_TO_PIPE = ISTREAM_FILE | ISTREAM_PIPE,
     ISTREAM_TO_SOCKET = ISTREAM_FILE | ISTREAM_PIPE,
 #else
+    ISTREAM_TO_PIPE = ISTREAM_FILE,
     ISTREAM_TO_SOCKET = ISTREAM_FILE,
 #endif
 
