@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.5.3) unstable; urgency=low
 
   * cgi: close request body on fork() failure
+  * fork: added workaround for pipe-to-pipe splice()
 
  --
 
